# local-rag-chat

./: .env.example  .gitignore  README.md
backend/: process_pdf_directory.py  pyproject.toml  test_semantic_db.ipynb
backend/app/: main.py  models.py
backend/app/agents/: chat.py  rag.py
backend/app/semantic_db/: ollama_vecs.py  openai_vecs.py  pdf_utils.py  semantic_db.py
backend/db_semantic/semantic-db-table.lance/_transactions/: 0-836ceb49-afd4-411d-a694-51b58b84f92b.txn  1-814030c0-4066-40f8-b25c-62fc35580dfd.txn  2-e1be54f0-9486-4301-969a-4cb184fb3a72.txn  3-017ec3ee-0e8a-4ec9-826d-835160729374.txn
backend/db_semantic/semantic-db-table.lance/data/: 5cfdc5f7-e13d-479e-a363-99629b1c8396.lance  5d096774-9722-48aa-a4bb-69c8ac7db995.lance
backend/ui/: streamlit_app.py
