[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["HeskethGD <graham.hesketh@opsmorph.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
streamlit = "^1.40.1"
fastapi = "^0.115.5"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
